--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.2",
     "socket.io": "^2.0.4"
+  },
+  "devDependencies": {
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
